--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </script>
 </head>
 
-<body className="h-full">
+<body className="h-full bg-gray-100">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
